--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
       <img class="srv-img" src="image/exclamation.png" alt="">
       <p>Download the app for a better support </p>
       <div class="d-grid gap-2 col-6 mx-auto">
-        <a class="btn  btn-outline-dark" href="/application/apple.html" role="button"><i class=" fa-brands fa-apple"></i> Download</a>
-        <a class="btn  btn-outline-success" href="/application/android.html" role="button"><i class="fa-brands fa-android"></i> Download</a>
+        <a class="btn  btn-outline-dark" href="/application/apple.html" role="button"><i class=" logoD fa-brands fa-apple"></i> Download</a>
+        <a class="btn  btn-outline-success" href="/application/android.html" role="button"><i class="logoD fa-brands fa-android"></i> Download</a>
       </div>
     </div>
   </section>
