--- a/application/apple.html
+++ b/application/apple.html
@@ -14,16 +14,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Serif&display=swap" rel="stylesheet">
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
     <div class="message">
-      <img class="message-img"src="/image/hold.png" alt="">
+      <img class="message-img"src="image/hold.png" alt="">
       <h1 class="big-heading">ON!</h1>
-       <h5 class="text"> <span><img class="web-img"src="/image/apple.png" alt=""></span>  SERVICES ARE COMING SOON</h5>
+       <h5 class="text"> <span><img class="web-img"src="image/apple.png" alt=""></span>  SERVICES ARE COMING SOON</h5>
       <h5 class="text">BY</h5>
-      <img class="act-khusi-img"src="/image/khusi.png" alt="">
+      <img class="act-khusi-img"src="image/khusi.png" alt="">
       <h1 class="text">DEVELOPER {KHUSI}</h1>
     </div>
   </body>
