--- a/application/android.html
+++ b/application/android.html
@@ -20,7 +20,7 @@
     <div class="message">
       <img class="message-img"src="image/hold.png" alt="">
       <h1 class="big-heading">ON!</h1>
-       <h5 class="text"> <span><img class="web-img"src="/image/android.png" alt=""> </span>SERVICES ARE COMING SOON</h5>
+       <h5 class="text"> <span><img class="web-img"src="image/android.png" alt=""> </span>SERVICES ARE COMING SOON</h5>
       <h5 class="text">BY</h5>
       <img class="act-khusi-img"src="image/khusi.png" alt="">
       <h1 class="text">DEVELOPER {KHUSI}</h1>
